# WikiRyvals

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: .env.example
extension/: admin.html  admin.js  background.js  config.js  content.css  content.js  lobby.css  lobby.html  lobby.js  manifest.json  theme-switch.css  watch.html  watch.js
site/: index.html  privacy.html  robots.txt  sitemap.xml  theme-switch.css
snapshot/: __init__.py  build_snapshot.py  gen_division_icons.py  generate_prompts.py  make_icons.py  seeds.py
tests/: test_core.py
wikirace/: __init__.py  accounts.py  admin.py  app.py  duos.py  glicko2.py  graph.py  matchmaking.py  play_graph.py  ranks.py  realtime.py  snapshot_store.py  wiki.py
