[project]
name = "ranked-wikirace"
version = "0.0.1"
description = "Phase 0 of Ranked Wikirace: snapshot/BFS difficulty pipeline + single-player prototype with server-side path validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["wikirace*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
